# LeanStartupExperiments

./: .gitignore  Dockerfile  LICENSE  admin.py  agent.py  agent_visualisation.ipynb  app.py  assistants.py  auth.py  basic_two_agent.py  chat.py  csv_helper.py  db_manager.py  docker-compose.yml  explaination.md  init_db.py  langchain copy.ipynb  langchain.ipynb  langchain_VPC_framework_test.ipynb  langchain_tushar.ipynb  main.py  models.py  multi_agent_chatbot.db  pyproject.toml  rag_system.py  readme.md  requirements.txt  requirements_s.txt  requirements_small.txt  setup.py  system-overview.md  update_schemma.py
.streamlit/: secrets.toml
Old/: multi-agent-chatbot-system.md
RAG-mesop-BMC/: huggingface.py  mesop-main.py
Temp_test/: basic_two_agent.py  langchain_VPC_framework_test.ipynb  langchain_framework_test.ipynb
Tushar-VPC-Chatbot/: chatbot_langchain_VPC_streamlit.py  evidently-eval.py  langhcain_VPC.ipynb
VPC/: langhcain_VPC.ipynb  tushar_langhcain_VPC.ipynb
data/: Langchain Test Prompts(VPC agent langchain).csv
evidently_results/: results_v1.json
langchain-tushar/: chatbot_langchain_VPC.py  chatbot_langchain_VPC_streamlit.py  tushar_pilot.ipynb
prompts/: Agent_A_Test.txt  BMC_combined_3Rs_structure.txt  VPC_supervisor_t.txt  VPC_supervisor_tushar.txt  prompt_VPC_CUT.txt
